test/bad/generics/print01.px

func f<T>(x: T) def
    print x

f(write)
